Fixed white space issue and codacy errors

--- a/packages/ext-theme-crisp-e3d6823b-ee55-4b48-b149-3df5a94e598b/sass/src/Component.scss
+++ b/packages/ext-theme-crisp-e3d6823b-ee55-4b48-b149-3df5a94e598b/sass/src/Component.scss
@@ -114,7 +114,7 @@
 
 .topic {
     background: darkslateblue; /*#54087A; radial-gradient(at 50% 50%, #54087A 0px, #965db2 80%);*/
-    margin: 0px 5px;
+    margin: 0px !important;
     height: 100%;
     text-align: center;
     width: 100%;
