--- a/resources/custommdstyles.css
+++ b/resources/custommdstyles.css
@@ -657,3 +657,7 @@ ii.
   position: relative;
   border-color: #4183c4;
 }
+
+.x-panel-body{
+    overflow-x:hidden !important; 
+}
